Desarrollo terminado Tarea 2

--- a/Modulo 2/styles.css
+++ b/Modulo 2/styles.css
@@ -1,37 +1,105 @@
+*{
+    box-sizing: border-box;
+}
 .ChickenText{
     color: brown;
-    font-style: oblique;
-    background-color: rgb(210, 207, 30);
+    font-style: oblique;  
 }
 
 .BeefText {
-    color: lightseagreen;
-    font-weight: bold;
-    background-color: rgba(96, 228, 69, 0.63);
+    color: rgb(21, 112, 108); 
 }
 
 .SushiText{
-    color: purple;
-    background-color: rgb(233, 144, 111);
-}
-.Title {
-    color: rgb(98, 15, 231);
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-align:center;
-    opacity: .4;
-    margin: 0px 0px 5px 500px;
+    color: rgb(35, 32, 214);
 }
 
-#Title{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font: size 100px;
+#Menu{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 35px;
     text-align: center;
+    font-weight: bold;
+    margin: 70px 40px 50px 40px;
 }
-
 
 div{
-    border: 3px solid black;
-    margin: 30px ;
+    border:1px solid rgb(3, 13, 29);
+    width:90%;
+    padding: 0px;
+    background-color: rgba(230, 163, 202, 0.486);
+}
+body{
+    margin:15px; 
 }
 
+section{
+    text-align: center;
+    border:1px solid rgb(19, 13, 13);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: black;
+    font-weight:bold;
+    font-style: normal;
+    width: 30%;
+    margin-left:auto ;
+}
 
+.ChickenT{
+    background-color: rgba(210, 207, 30, 0.836);
+}
+
+.BeefT{
+    background-color: rgba(96, 228, 69, 0.63);
+}
+
+.SushiT{
+    background-color: rgba(147, 90, 221, 0.726);
+}
+
+p{
+    padding: 15px;
+   /* margin-right: auto;
+    margin-left:auto;
+    margin-top: auto;
+    margin-bottom: auto;*/
+    margin: 0;
+}
+
+@media (min-width: 992px){
+    
+    .ChickenText, .BeefText, .SushiText{
+        margin: 15px;
+        width: 30.1%;
+        float: left;
+    }
+
+
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+.SushiT{
+    width: 15%;
+}
+    .ChickenText, .BeefText{
+        margin: 10px;
+        
+        width: 47%;
+        
+        float: left;
+        
+    }
+    .SushiText{
+        margin: 10px;
+
+        float:left;
+        width: 96.7%;
+    }
+}
+@media (max-width: 767px){
+
+    .ChickenText, .BeefText, .SushiText{
+        margin: 15px;
+        width: 95%;
+    }
+
+
+}
